Bug 1812227 - Use InputBlockState::mTransformToApzc to compute the local coordinates of the synthesized touch event in MaybeSplitTouchMoveEvent(). r=dlrobertson

For events in a given input block to have coherent local coordinates
(so that e.g. it's sensible to compute a delta between the local
coordinates of two adjacent events), it's important that the local
coordinates are computed using the same screen-to-apzc transform
for all events.

To facilitate this, the transform is cached at the beginning of the
input block in InputBlockState::mTransformToApzc, and all events
in the block are expected to use it.

MaybeSplitTouchMoveEvent() was synthesizing and processing a new event
without using this cached value, resulting in misbehaviour.

Differential Revision: https://phabricator.services.mozilla.com/D222193